force-app/main/default/objects/FeedBack__c/FeedBack__c.object-meta.xml
<CustomObject>
    <label>FeedBack</label>
    <nameField>
        <displayFormat>CSAT-{00000}</displayFormat>
        <label>FeedBack Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FeedBacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>