force-app/main/default/objects/FeedBack__c/fields/Booking_Source__c.field-meta.xml
<CustomField>
    <fullName>Booking_Source__c</fullName>
    <label>Booking Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Ref from Customer</fullName>
            </value>
            <value>
                <fullName>Site Board</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>