force-app/main/default/objects/FeedBack__c/fields/FBQ10__c.field-meta.xml
<CustomField>
    <fullName>FBQ10__c</fullName>
    <label>How do you rate our quality of construct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Feedback_Values</valueSetName>
    </valueSet>
</CustomField>