force-app/main/default/objects/FeedBack__c/fields/FBQ11__c.field-meta.xml
<CustomField>
    <fullName>FBQ11__c</fullName>
    <label>rate the response of our Site Engineer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Feedback_Values</valueSetName>
    </valueSet>
</CustomField>