force-app/main/default/objects/FeedBack__c/fields/FBQ12__c.field-meta.xml
<CustomField>
    <fullName>FBQ12__c</fullName>
    <label>Did all our staff act in a professiona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Feedback_Values</valueSetName>
    </valueSet>
</CustomField>