force-app/main/default/objects/FeedBack__c/fields/FeedBack_Responded_Date__c.field-meta.xml
<CustomField>
    <fullName>FeedBack_Responded_Date__c</fullName>
    <label>FeedBack Responded Date</label>
    <type>DateTime</type>
</CustomField>