force-app/main/default/objects/FeedBack__c/fields/Joint_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Joint_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Joint Inspection</label>
    <referenceTo>Joint_Inspection__c</referenceTo>
    <relationshipLabel>FeedBacks</relationshipLabel>
    <relationshipName>FeedBacks</relationshipName>
    <type>Lookup</type>
</CustomField>